# physnum_ex1

./: .gitignore  CMakeLists.txt  Exercice1_student.cpp  SDL_render.cpp  SDL_render.hpp  configuration.in.example  parameterscan.py  parameterscan_3alphas.py
